puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Membership.Welcome/content/Controllers/Account/AccountController.Welcome.cs.pp
namespace $rootnamespace$.Controllers.Account
{
    using System.Web.Mvc;

    public partial class AccountController
    {      
        public ActionResult Welcome()
        {
            return View();
        }
    }
}
